service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: project1
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 2000
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: project1
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
